--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,5 @@
-<div id='container'>
-  <!-- Your html here -->
+<div id='container' ng-controller='LinksController'>
+  <ul ng-repeat='link in data.test'>
+    {{ link.url }}
+  </ul>
 </div>
