created shorten and links templates

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,5 +1,5 @@
 <div id='container' ng-controller='LinksController'>
-  <ul ng-repeat='link in data.test'>
+  <ul ng-repeat='link in data.links'>
     {{ link.url }}
   </ul>
 </div>
