--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,6 @@
 <div id='container'  ng-controller='ShortenController'>
-<!-- Your code here -->
-
+  <input type='text' ng-model='link'>
+  <button ng-click='addLink(link)'>Submit Link </button>
 </div>
 
 
