implemented custom directive for validating username

--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,8 +1,14 @@
 <div id='signin'>
   <h1>signin</h1>
   <form name="signinForm" ng-submit='signin()'>
-    <input type='text'ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
+    <span ng-show='signinForm.username.$error.invalidCharacters'>Needs to be an alphanumeric character</span>
+    <span ng-show='signinForm.username.$error.minlength'>Username must contain 3 or more characters</span>
+    <pre>
+      {{signinForm.username.$error}}
+      <!-- {{signinForm.username.$error.invalidCharacters}} -->
+    </pre>
+    <input validate-user type='text' name='username' ng-minlength='3' ng-model='user.username'>
+    <input type="password" name='pass' ng-model='user.password'>
     <button>signin</button>
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
