--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,6 @@
 <a href='/#/shorten'>Shorten</a>
 <a href='/#/links'>Links</a>
-<div id='container'  ng-controller='ShortenController'>
+<div id='container'>
   <form name="linkForm">
     <input type='text' ng-model='link' name='theLink' ng-pattern='/^https?\:\/\/www\.\w+\.\w{2,}$/'>
     <span ng-show="linkForm.theLink.$error.pattern">Not a Valid URL!</span>
