--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,7 +1,9 @@
 <div id='signup'>
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
+    <span ng-show='signupForm.username.$error.invalidCharacters'>Needs to be an alphanumeric character</span>
+    <span ng-show='signupForm.username.$error.minlength'>Username must contain 3 or more characters</span>
+    <input validate-user ng-minlength='3'type='text' ng-model='user.username' name= 'username'>
     <input type="password" ng-model='user.password'>
     <button>signup</button>
   </form>
